# snapdog

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.client  Dockerfile.demo  Makefile  README.md  render.yaml  snapdog.example.toml
.config/: nextest.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release-please.yml  release.yml  sync-docs.yml
assets/: snapdog-logo-pro.ai
aur/snapdog/: PKGBUILD
aur/snapdog-client/: PKGBUILD
debian/dists/stable/: Release
debian/dists/stable/main/binary-amd64/: Packages
debian/dists/stable/main/binary-arm64/: Packages
debian/pool/: snapdog-client_0.10.0-1_amd64.deb  snapdog-client_0.10.0-1_arm64.deb  snapdog-client_0.11.1-1_amd64.deb  snapdog-client_0.11.1-1_arm64.deb  snapdog-client_0.11.3-1_amd64.deb  snapdog-client_0.11.3-1_arm64.deb  snapdog-client_0.11.4-1_amd64.deb  snapdog-client_0.11.4-1_arm64.deb  snapdog-client_0.12.0-1_amd64.deb  snapdog-client_0.12.0-1_arm64.deb  snapdog-client_0.12.1-1_amd64.deb  snapdog-client_0.12.1-1_arm64.deb  snapdog-client_0.12.2-1_amd64.deb  snapdog-client_0.12.2-1_arm64.deb  snapdog-client_0.12.3-1_amd64.deb  snapdog-client_0.12.3-1_arm64.deb  snapdog-client_0.13.0-1_amd64.deb  snapdog-client_0.13.0-1_arm64.deb  snapdog-client_0.14.0-1_amd64.deb  snapdog-client_0.14.0-1_arm64.deb  snapdog-client_0.14.1-1_amd64.deb  snapdog-client_0.14.1-1_arm64.deb  snapdog-client_0.14.2-1_amd64.deb  snapdog-client_0.14.2-1_arm64.deb  snapdog-client_0.15.0-1_amd64.deb  snapdog-client_0.15.0-1_arm64.deb  snapdog-client_0.16.0-1_amd64.deb  snapdog-client_0.16.0-1_arm64.deb  snapdog-client_0.16.1-1_amd64.deb  snapdog-client_0.16.1-1_arm64.deb  snapdog-client_0.17.0-1_amd64.deb  snapdog-client_0.17.0-1_arm64.deb  snapdog-client_0.18.0-1_amd64.deb  snapdog-client_0.18.0-1_arm64.deb  snapdog-client_0.19.0-1_amd64.deb  snapdog-client_0.19.0-1_arm64.deb  snapdog-client_0.20.0-1_amd64.deb  snapdog-client_0.20.0-1_arm64.deb  snapdog-client_0.21.0-1_amd64.deb  snapdog-client_0.21.0-1_arm64.deb  (+40 more)
demo-backend/: package-lock.json  package.json  server.js
docs/architecture/: decisions.md
docs/rfcs/: 0001-bluetooth-source.md  0002-pcm-line-in.md  0003-integration-test-suite.md  0004-knx-ets-parameter-apply.md  0005-client-identity.md  0006-macos-app-ux.md
knx/: snapdog.knxprod  snapdog.xml
macos-helper/: check-i18n.py  merge-appcast.py
macos-helper/SnapDogServer/: .gitignore  project.yml
macos-helper/SnapDogServer/SnapDog Server/: AboutView.swift  App.swift  ConfigView.swift  Info.plist  Localizable.xcstrings  ServerManager.swift  TOMLConfigParser.swift
macos-helper/SnapDogServer/SnapDog Server.xcodeproj/: project.pbxproj
macos-helper/SnapDogServer/SnapDog Server.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
macos-helper/SnapDogServer/SnapDog Server/AppIcon.icon/: icon.json
macos-helper/SnapDogServer/SnapDog Server/Assets.xcassets/AppIcon.appiconset/: Contents.json
snapdog/: Cargo.toml  build.rs
snapdog-client/: Cargo.toml  build.rs
snapdog-client/src/: cli.rs  dbus.rs  logging.rs  main.rs
snapdog-client/src/player/: mod.rs
snapdog-common/: Cargo.toml
snapdog-common/src/: lib.rs
snapdog-testkit/: Cargo.toml
snapdog-testkit/src/: lib.rs
snapdog/src/: lib.rs  main.rs  service_windows.rs  spinorama.rs
snapdog/src/api/: auth.rs  error.rs  mod.rs  openapi.rs  webui.rs  ws.rs
snapdog/src/api/routes/: client_eq.rs  clients.rs  eq.rs  knx.rs  media.rs  speakers.rs  system.rs  zones.rs
snapdog/src/audio/: cache.rs  eq.rs  icy.rs  mod.rs  resample.rs
snapdog/src/config/: convention.rs  mod.rs  types.rs
snapdog/src/dbus/: mod.rs  player.rs  root.rs
snapdog/src/knx/: client.rs  device.rs  ets_config.rs  group_objects.rs  mod.rs  transport.rs
snapdog/src/mqtt/: mod.rs
snapdog/src/player/: commands.rs  context.rs  helpers.rs  mod.rs  nav.rs  runner.rs
snapdog/src/process/: mod.rs
snapdog/src/receiver/: airplay.rs  mod.rs  spotify.rs
snapdog/src/snapcast/: backend.rs  connection.rs  embedded.rs  events.rs  mod.rs  process.rs  protocol.rs
snapdog/src/state/: cover.rs  mod.rs
snapdog/src/subsonic/: mod.rs
snapdog/tests/: README.md  audio.rs  audio_decode_chain.rs  auth.rs  config_cli.rs  config_contract.rs  headless_boot.rs  integration.rs  knx_golden.rs  mqtt_tier2.rs  openapi_contract.rs  rest_commands.rs  rest_smoke.rs  rest_surfaces.rs  rest_zones.rs  snapcast.rs  snapcast_rpc.rs  snapserver_e2e.rs  testkit.rs  ws.rs  ws_lifecycle.rs  ws_ping.rs  zone_player.rs
snapdog/tests/common/: mod.rs
snapdog/tests/fixtures/: decode_chain_48k.flac  decode_chain_48k.gen.py  decode_chain_48k.json  testkit_demo.json  testkit_sine.json
webui/: package-lock.json  package.json
webui/messages/: .i18n-allow.json  de.json  en.json  es.json  fr.json  it.json  nl.json
webui/src/app/: globals.css  layout.tsx  page.tsx
webui/src/components/: AboutButton.tsx  ClientList.tsx  ConnectButton.tsx  ConnectionStatus.tsx  EqOverlay.tsx  LocalePicker.tsx  Marquee.tsx  NowPlaying.tsx  PlaylistBrowser.tsx  SeekBar.tsx  ShuffleRepeat.tsx  ThemeToggle.tsx  TransportControls.tsx  VolumeSlider.tsx  ZoneDetail.tsx  ZoneRailItem.tsx
webui/src/components/ui/: slider.tsx
webui/src/hooks/: useOptimisticValue.ts  useWebSocket.ts
webui/src/i18n/: provider.tsx
webui/src/lib/: api.ts  auth.ts  types.ts
webui/src/stores/: useAppStore.ts
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/golden/: product.xml
