[workspace]
resolver = "2"
members = [
  "snapdog",
  "snapdog-client",
  "snapdog-common",
  "snapdog-testkit",
  "xtask",
]

[workspace.package]
version = "0.25.1"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/SnapDogRocks/snapdog"
authors = ["Fabian Schmieder"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# mDNS discovery
mdns-sd = "0.20"

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["cors", "trace", "compression-full"] }
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Audio decoding
symphonia = { version = "0.6", features = ["aac", "mp3", "flac", "alac", "isomp4", "pcm"] }

# Audio resampling
rubato = "4.0"
biquad = "0.6"

# MQTT
# rumqttc 0.25's default Rustls feature pins vulnerable rustls-webpki 0.102.x
# (GHSA advisory #21). Native TLS is supported upstream and avoids that path.
rumqttc = { version = "0.25", default-features = false, features = ["use-native-tls"] }

# KNX
knx-rs-core = { version = "0.8", package = "knx-rs-core" }
knx-rs-ip = { version = "0.8", package = "knx-rs-ip" }
knx-rs-device = { version = "0.8", package = "knx-rs-device" }

# HTTP client (Subsonic API, radio streams)
reqwest = { version = "0.13", features = ["json", "stream"] }

# TLS crypto provider — install a process-level default. Both `ring` and `aws-lc-rs`
# are present transitively (axum-server/bollard vs reqwest), so rustls cannot auto-pick
# one; see `api::install_crypto_provider`.
rustls = "0.23"

# URL parsing
url = "2"

# Stream utilities
futures-util = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Snapcast
snapcast-server = { version = "0.17.2", features = ["flac", "encryption", "custom-protocol"] }
snapcast-client = "0.17.2"
snapcast-proto = "0.17.2"

# Shared
snapdog-common = { path = "snapdog-common" }

# Utilities
md5 = "0.8"
fastrand = "2"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Testing
[workspace.dependencies.mockall]
version = "0.15"

[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.wiremock]
version = "0.6"

[workspace.dependencies.dotenvy]
version = "0.15"

[profile.release]
# Thin LTO + parallel codegen: ~full-LTO runtime performance at a fraction of the build
# time. Fat LTO (`lto = true`) with `codegen-units = 1` made release builds 2–4 h each
# (the Windows leg alone ~4 h) because whole-program LTO is single-threaded and cu=1
# disables codegen parallelism. Thin LTO parallelizes across units — cuts the matrix to
# ~30–60 min with a negligible (~2–5 %) runtime cost.
lto = "thin"
strip = true
codegen-units = 16

[workspace.lints.clippy]
# Pedantic — strict but reasonable
pedantic = { level = "warn", priority = -1 }
# Nursery — useful experimental lints
nursery = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "deny"
