[package]
name = "snapdog-common"
version = "0.1.0"
edition = "2024"
description = "Shared types and constants for SnapDog server and client"
license = "GPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["uuid", "chrono"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
openapi = ["dep:utoipa"]

[lints]
workspace = true
