[package]
name = "snapdog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Multi-zone audio controller with AirPlay, Snapcast, MQTT, and KNX integration"

[[bin]]
name = "snapdog"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["ico", "png"] }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# snapcast-control removed — using own JSON-RPC client (ADR-018)
symphonia = { workspace = true }
rubato = { workspace = true }
biquad = { workspace = true }
rumqttc = { workspace = true }
knx-rs-core = { workspace = true }
knx-rs-ip = { workspace = true }
knx-rs-device = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
md5 = { workspace = true }
fastrand = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rust-embed = "8"
mac_address = "1"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }
shairplay = "0.7"
mdns-sd = "0.20"
gethostname = "1"
zbus = { version = "5", optional = true }
librespot-core = { version = "0.8", optional = true }
librespot-playback = { version = "0.8", default-features = false, optional = true }
librespot-connect = { version = "0.8", optional = true }
librespot-discovery = { version = "0.8", optional = true }
librespot-metadata = { version = "0.8", optional = true }

snapcast-server = { workspace = true, optional = true }
snapcast-proto = { workspace = true }
snapdog-common = { workspace = true, features = ["openapi"] }
subtle = "2"
utoipa-scalar = { workspace = true, optional = true }

[features]
default = ["snapcast-embedded", "spotify", "dbus"]
snapcast-embedded = ["dep:snapcast-server"]
snapcast-process = []
ap2 = ["shairplay/ap2"]
dbus = ["dep:zbus"]
spotify = ["dep:librespot-core", "dep:librespot-playback", "dep:librespot-connect", "dep:librespot-discovery", "dep:librespot-metadata"]
api-docs = ["dep:utoipa-scalar"]
# Test-only: enables the ZonePlayerContext::test_pcm_rx injection seam used by
# the integration harness to drive the real decode→send_audio path (IT-T55).
test-harness = []

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }       # in-process Router::oneshot (IT-0003 tier-1)
assert-json-diff = "2"                                  # REST/MQTT JSON body asserts
tokio-tungstenite = "0.29"                              # WS client for the WS lifecycle tests (IT-T21)
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mosquitto"] }
snapdog-testkit = { path = "../snapdog-testkit" }       # reusable testkit (IT-T94)

[package.metadata.deb]
section = "sound"
copyright = "2026 Fabian Schmieder"
depends = "libasound2, libavahi-compat-libdnssd1"
conf-files = ["/etc/snapdog/snapdog.toml", "/etc/default/snapdog"]
assets = [
  ["target/release/snapdog", "usr/bin/", "755"],
  ["../snapdog.example.toml", "etc/snapdog/snapdog.toml", "644"],
  ["debian/snapdog.default", "etc/default/snapdog", "644"],
]
systemd-units = { unit-name = "snapdog", enable = false, start = false }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"

[lints]
workspace = true
