[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
snapdog = { path = "../snapdog", default-features = false }
knx-rs-prod = { version = "0.7", features = ["fetch"] }
utoipa = { workspace = true }

[dev-dependencies]
# Read the committed .knxprod (a ZIP) in the artifact-freshness test.
zip = "8.6"

[lints]
workspace = true
